# SIRmodel

./: .gitattributes  README.md  main.cpp
option1/: CMakeLists.txt  istruzioni.txt  main.cpp  point.cpp  point.hpp  point.test.cpp  print.cpp  sir.cpp  sir.hpp  sir.test.cpp
option2/: CMakeLists.txt  board.hpp  board.test.cpp  count.cpp  display.hpp  evolve.cpp  main.cpp  person.hpp  point.hpp  point.test.cpp  random.cpp
opzione1/: I(t).txt  R(t).txt  S(t).txt  sir.cpp
tex/: relazione.aux  relazione.out  relazione.tex
